  near future replace the normal atkShuttleRelation. [Tjeerd,Peter]
+ Added support for "edit" dialogs for only 1 attribute (only supported for
  atkManyToOneRelations for now). In recordlists a user can click on the value
  of the attribute and a dialog appears, which makes it possible to changes only
  the value of that attribute. This functionality can be activated with the
  AF_RELATION_EDITDIALOG flag. [Dennis]
+ Added action caching support to atkFrontController. [Peter]
+ Added command line support for test.php file in atk skel. [Guido]
+ Implemented caching of query results by node and filter in
  atkmanytomanyrelation to prevent multiple identical query executions
  during a single request. [Patrick, Tjeerd]
+ Added functions addOption and removeOption to 'atklistattribute' for easy
  adding and removing options from a dropdown [Jeroen]
+ Added the actionhandler attributeEditHandler which provides a dialog for editing
  one attribute for multiple records at the same time. The new action can be used
  by calling the new atkNode method addDialogMRA() with 'attributeedit' as its
  argument, which will render an extra button next to the MRA dropdown [Dennis].
+ Made it possible to extend atkTimeZoneAttribute by calling it's methods non-
  static. [Tjeerd]
+ Added atkvardump modifier. [Boy]
* atkTmpFile now is able to recursively create the directory structure for
  the temporary file if the directory doesn't already exist. [Peter]
* Fixed debug output in atkTestReporter. [Patrick]
* Fixed non-object error in atkTextAttribute. [Patrick]
* Fixed example test module in atk skel. [Guido]
* Fixed "Cannot convert object to string" error in php 5.2+ in the atkDb
  testcase. [Guido]
* Fixed error in atkNode testcase ($node->m_module should be a string, not an
  object). [Guido]
* Fixed PHP Notice in atkGetUser(). [Guido]
* Added class="btn_ok" to confirm button in atkNode class by default, similar